name:                imgur-haskell
version:             0.1.0.0
synopsis:            Haskell library for the imgur API.
homepage:            https://github.com/Solonarv/imgur-haskell#readme
license:             MIT
license-file:        LICENSE
author:              Solonarv
maintainer:          nstamm@gmx.de
copyright:           2016 Solonarv
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Imgur
  build-depends:       base >= 4.7 && < 5
                     , hoauth2
                     , free
                     , servant-client
                     , aeson
                     , text
  default-language:    Haskell2010

test-suite imgur-haskell-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , imgur-haskell
                     , hoauth2
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/Solonarv/imgur-haskell
